# f3_altimeter

./: .gitignore  Cargo.toml  README.md
lsm303dlhc/: Cargo.toml
mpl3115a2/: Cargo.toml  README.md
src/: main.rs
