[package]
name = "f3_altimeter"
version = "0.1.0"
authors = ["Nicodemus Paradiso <nicodemus26@gmail.com>"]
description = "A test of the MPL3115A2 driver using the STM32F3DISCOVERY dev board"
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicodemus26/f3_altimeter"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies.cortex-m]
version = "0.5.6"

[dependencies.cortex-m-rt]
version = "0.5.3"

[dependencies.cortex-m-semihosting]
version = "0.3.1"

[dependencies.panic-semihosting]
version = "0.3.0"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"
